--- a/package.json
+++ b/package.json
@@ -3,28 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.0",
-    "@fortawesome/free-brands-svg-icons": "^5.1.0",
-    "@fortawesome/react-fontawesome": "^0.1.0",
-    "ajv": "^6.5.2",
-    "bootstrap": "^4.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.5",
+    "@fortawesome/free-brands-svg-icons": "^5.4.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "ajv": "^6.5.4",
+    "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "react": "^16.4.1",
-    "react-chartjs-2": "^2.7.2",
-    "react-dom": "^16.4.1",
+    "popper.js": "^1.14.4",
+    "react": "^16.5.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "reactstrap": "^6.2.0"
+    "react-scripts": "2.0.4",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
     "react-test-renderer": "^16.5.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
