--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ajv": "^6.5.4",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
+    "chartjs-plugin-annotation": "^0.5.7",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
