--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fludetector-app-react",
-  "version": "1.1.0-rc.1",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
