--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartjs-plugin-annotation": "^0.5.7",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.14.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
@@ -30,6 +31,10 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-jest": "^22.14.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "react-test-renderer": "^16.8.6"
   },
   "browserslist": [
@@ -37,21 +42,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "eslintConfig": {
-    "extends": "airbnb",
-    "parser": "babel-eslint",
-    "env":
-    {
-      "node": true,
-      "es6": true,
-      "browser": true
-    },
-    "rules":
-    {
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "react/forbid-prop-types": "off",
-      "import/no-extraneous-dependencies": "off"
-    }
-  }
+  ]
 }
