--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.3.1",
+    "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
@@ -18,9 +18,8 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.0.1",
-    "typeface-clear-sans": "0.0.44",
-    "typescript": "^3.5.3"
+    "react-scripts": "3.1.0",
+    "typeface-clear-sans": "0.0.44"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,14 +28,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@typescript-eslint/experimental-utils": "^1.13.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-jest": "^22.15.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "react-test-renderer": "^16.9.0"
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-plugin-jest": "^22.15.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3"
   },
   "browserslist": [
     ">0.2%",
