--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "@material-ui/icons": "^4.2.1",
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-react": "^7.14.3",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
@@ -32,8 +30,10 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "6.1.0",
     "eslint-config-airbnb": "^18.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.15.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3"
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3"
   },
   "browserslist": [
     ">0.2%",
