--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "fludetector-app-react",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.21",
-    "@fortawesome/free-brands-svg-icons": "^5.10.1",
-    "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-chartjs-2": "^2.7.6",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react": "^16.10.2",
+    "react-chartjs-2": "^2.8.0",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0",
     "typeface-clear-sans": "0.0.44"
   },
   "scripts": {
@@ -27,13 +27,13 @@
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "6.1.0",
+    "enzyme-adapter-react-16": "^1.15.0",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.15.1",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint-plugin-react": "^7.16.0"
   },
   "browserslist": [
     ">0.2%",
