--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@sheerun/mutationobserver-shim": "^0.3.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
-    "history": "^5.0.1"
+    "history": "^5.0.1",
+    "jest-canvas-mock": "^2.3.1"
   },
   "browserslist": [
     ">0.2%",
